<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".PaymentActivity">

    <TextView
        android:id="@+id/tvAmountInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/payment_title"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnAcceptPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_payment"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnAlternativePayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alternative_payment"
        android:backgroundTint="#4CAF50"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCancelPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_payment"
        android:backgroundTint="#FF5252"/>

</LinearLayout>