<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="32dp"
    android:paddingBottom="24dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@drawable/dialog_yappy_background">

    <ImageView
        android:id="@+id/ivYappyLogo"
        android:layout_width="253dp"
        android:layout_height="108dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="Logo Yappy"
        android:src="@drawable/ic_yappy_logo_dark" />

    <TextView
        android:id="@+id/tvScanWithYappyInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_title"
        android:textSize="15sp"
        android:textColor="@color/yappy_text_on_blue_primary"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tvQrAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/yappy_text_on_blue_primary"
        android:layout_marginBottom="20dp"
        tools:text="$8.56" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="4dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivQrCode"
            android:layout_width="296dp"
            android:layout_height="290dp"
            android:contentDescription="@string/qr_code_description"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvScanInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_instruction"
        android:textColor="@color/yappy_text_on_blue_secondary"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginBottom="4dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:id="@+id/tvQrStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/yappy_text_on_blue_secondary"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"
        tools:text="Tiempo restante: 01:23" />

    <Button
        android:id="@+id/btnCancelQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yappy_button_cancel_red"
        android:paddingStart="40dp"
        android:paddingTop="12dp"
        android:paddingEnd="40dp"
        android:paddingBottom="12dp"
        android:text="@string/cancel_payment"
        android:textColor="@color/white" />

</LinearLayout>